--- a/artykul.html
+++ b/artykul.html
@@ -2,6 +2,7 @@
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sztuczna inteligencja: wpływ i wyzwania</title>
     <style>
       body {
@@ -12,6 +13,7 @@
         padding: 20px;
         background-color: #dddddd;
         display: grid;
+        column-gap: 1rem;
         grid-template-columns: repeat(8, 1fr);
         justify-items: center;
         justify-content: centers;
@@ -25,20 +27,27 @@
         font-weight: 800;
       }
       p {
+        padding-top: 8px;
         margin-bottom: 1em;
         grid-column: 3 / 6;
       }
       img {
-        padding: 5px;
+        padding-top: 8px;
         grid-column: 6 / 7;
         justify-self: center;
+        align-self: flex-end;
         max-width: 100%;
         height: auto;
+      }
+      figcaption {
+        font-size: 12px;
+        grid-column: 6 / 7;
       }
     </style>
   </head>
   <body>
     <h1>Sztuczna inteligencja: wpływ i wyzwania</h1>
+
     <p>
       Sztuczna inteligencja to dziedzina nauki i technologii zajmująca się
       tworzeniem maszyn i programów zdolnych do wykonywania zadań wymagających
@@ -51,10 +60,13 @@
       niej bardzo głośno chociażby za sprawą dużych modeli językowych, jak
       ChatGPT.
     </p>
+
     <img
       src="./img/sztuczna-inteligencja.jpg"
-      alt="Obrazek 1 - Sztuczna inteligencja"
+      alt="Ilustracja asystenta głosowego w smartfonie"
     />
+    <figcaption>Asystent głosowy w smartfonie</figcaption>
+
     <p>
       Rozwój uczenia maszynowego i głębokiego uczenia umożliwił tworzenie
       zaawansowanych modeli, które potrafią samodzielnie rozwiązywać
@@ -63,8 +75,15 @@
       naturalnego. Dzięki temu AI nie tylko przetwarza dane, ale także podejmuje
       decyzje, wcześniej zarezerwowane dla ludzi.
     </p>
-    <img src="./img/sieci-neuronowe.jpg" alt="Obrazek 2 - Sieci neuronowe" />
+
+    <img
+      src="./img/sieci-neuronowe.jpg"
+      alt="Ilustracja sieci neuronowej analizującej dane"
+    />
+    <figcaption>Sieć neuronowa analizująca dane</figcaption>
+
     <h2>Wyzwania etyczne i społeczne</h2>
+
     <p>
       Kluczowym wyzwaniem jest zapewnienie etycznego i odpowiedzialnego rozwoju
       AI. Należy zwracać uwagę na uprzedzenia w danych treningowych, które mogą
@@ -74,8 +93,23 @@
       społecznych w ten proces. Transparentność działań firm i instytucji może
       pomóc w budowaniu zaufania do technologii.
     </p>
-    <img src="./img/wyzwania etyczne.jpg" alt="Obrazek 3 - Wyzwania etyczne" />
+
+    <img
+      src="./img/wyzwania etyczne.jpg"
+      alt="Ilustracja różnorodności społecznej w kontekście AI"
+    />
+    <figcaption>Różnorodność społeczna w kontekście AI</figcaption>
+
+    <p>
+      Badacze pracują nad rozwiązaniami umożliwiającymi harmonijne
+      współistnienie ludzi i AI, koncentrując się na tworzeniu systemów
+      wspierających człowieka, a nie go zastępujących. Istotne jest
+      opracowywanie mechanizmów współpracy między człowiekiem a maszyną, co
+      sprzyja synergii i skutecznej komunikacji.
+    </p>
+
     <h2>Automatyzacja i przyszłość rynku pracy</h2>
+
     <p>
       Automatyzacja procesów dzięki AI przynosi korzyści w postaci zwiększonej
       efektywności i redukcji kosztów. Jednak istnieją obawy dotyczące wpływu na
@@ -84,21 +118,31 @@
       i przekwalifikowanie pracowników, aby mogli oni znaleźć nowe role w
       gospodarce przyszłości.
     </p>
+
     <img
       src="./img/automatyzacja-pracy.jpg"
-      alt="Obrazek 4 - Automatyzacja pracy"
+      alt="Ilustracja automatyzacji procesów w firmie"
     />
+    <figcaption>Automatyzacja procesów w firmie</figcaption>
+
     <p>
       Specjaliści powinni być gotowi na ciągłe doskonalenie swoich umiejętności,
       ucząc się m.in. zasad działania algorytmów AI. Przyszłość pracy będzie
       wymagać nie tylko umiejętności technicznych, ale także kompetencji
       miękkich, takich jak kreatywność i zdolność rozwiązywania problemów.
     </p>
-    <img src="./img/praca-z-AI.jpg" alt="Obrazek 5 - Praca z AI" />
-    <p>
+
+    <h3>
       Nasza zdolność do adaptacji i innowacji zdecyduje o tym, jak AI wpłynie na
       przyszłość ludzkości. Wspólnie możemy kształtować tę przyszłość,
       wykorzystując AI dla dobra wszystkich.
+    </h3>
+
+    <p>
+      <i
+        >*Tekst opracowany przez AI. W Oxido nie mamy aż tak cukierkowego
+        spojrzenia na sztuczną inteligencję... ;)</i
+      >
     </p>
   </body>
 </html>
